--- a/test-output/html/output.html
+++ b/test-output/html/output.html
@@ -15,142 +15,163 @@
   </p>
 
   <div id="log">
-                  <p>Firefox Launched</p>
-                        <p>Browser Maximised</p>
-                        <p>Sign in Page Title Verified</p>
-                        <p>User signed Admin</p>
-                        <p>Enter Text for Search =0000011111</p>
-                        <p>is displayed in 110ms</p>
-                        <p>Click Customer</p>
-                        CustomerId found 0000011111
-                        Strings Matched: 0000011111 =0000011111
-                        <p>Customer ID Matched =0000011111</p>
-                        <p>Adminis displayed in 47ms</p>
-                        <p>Sign Outis displayed in 94ms</p>
-                        <p>All Tests Completed...</p>
-                        <p>Firefox Launched</p>
-                        <p>Browser Maximised</p>
-                        <p>Sign in Page Title Verified</p>
-                        <p>User signed Admin</p>
-                        <p>Enter Text for Search =LOC@0001</p>
-                        <p>is displayed in 47ms</p>
-                        <p>Click Customer</p>
-                        Customer Location Id found LOC@0001
-                        Strings Matched: LOC@0001 =LOC@0001
-                        <p>LocationID ID Matched =LOC@0001</p>
-                        <p>Adminis displayed in 46ms</p>
-                        <p>Sign Outis displayed in 62ms</p>
-                        <p>All Tests Completed...</p>
-                        <p>Firefox Launched</p>
-                        <p>Browser Maximised</p>
-                        <p>Sign in Page Title Verified</p>
-                        <p>User signed Admin</p>
-                        <p>is displayed in 109ms</p>
-                        <p>Click Recent</p>
-                        <p>Recent Customer =007 Test</p>
-                        <p>Click Customer</p>
-                        Click Ok
-                        <p>Cloudis displayed in 93ms</p>
-                        Strings Matched: 007 Test =007 Test
-                        <p>User Name Verified for Recent Functionality =007 Test</p>
-                        <p>Adminis displayed in 63ms</p>
-                        <p>Sign Outis displayed in 63ms</p>
-                        <p>All Tests Completed...</p>
-                        <p>Firefox Launched</p>
-                        <p>Browser Maximised</p>
-                        <p>Sign in Page Title Verified</p>
-                        <p>User signed Admin</p>
-                        <p>is displayed in 989ms</p>
-                        <p>is displayed in 114ms</p>
-                        <p>Enter Text for Search =Alert</p>
-                        <p>is displayed in 47ms</p>
-                        <p>Click Customer</p>
-                        <p>Cloudis displayed in 1312ms</p>
-                        Customer Name found Mr. Alert Test
-                        Strings Matched: Mr. Alert Test =Mr. Alert Test
-                        <p>User Name Verified for Alert Functionality</p>
-                        <p>OKis displayed in 109ms</p>
-                        Click Ok
-                        <p>Alert on Load Clicked</p>
-                        <p>Automation Messageis displayed in 41ms</p>
-                        Click Description
-                        <p>OKis displayed in 890ms</p>
-                        Click Ok
-                        <p>Alert on description Clicked</p>
-                        <p>Adminis displayed in 1125ms</p>
-                        <p>Sign Outis displayed in 50ms</p>
-                        <p>All Tests Completed...</p>
-                        <p>Firefox Launched</p>
-                        <p>Browser Maximised</p>
-                        <p>Sign in Page Title Verified</p>
-                        <p>User signed Admin</p>
-                        <p>is displayed in 126ms</p>
-                        <p>is displayed in 219ms</p>
-                        <p>Enter Text for Search =Automation</p>
-                        <p>is displayed in 48ms</p>
-                        <p>Click Customer</p>
-                        <p>CLOUDY
-D
-00720019is displayed in 1119ms</p>
-                        Customer Name found Mr. Automation Mate
-                        Strings Matched: Mr. Automation Mate =Mr. Automation Mate
-                        <p>User Name verified =Mr. Automation Mate</p>
-                        Transaction Link Clicked
-                        Summary Link Clicked
-                        <p>$0.00 equals$0.00</p>
-                        <p>-$14.74 equals-$14.74</p>
-                        <p>$50.00 equals$50.00</p>
-                        <p>$0.00 equals$0.00</p>
-                        <p>$0.00 equals$0.00</p>
-                        <p>-$14.74 equals-$14.74</p>
-                        <p>$50.00 equals$50.00</p>
-                        <p>$0.00 equals$0.00</p>
-                        <p>Adminis displayed in 155ms</p>
-                        <p>Sign Outis displayed in 94ms</p>
-                        <p>All Tests Completed...</p>
-                        <p>Firefox Launched</p>
-                        <p>Browser Maximised</p>
-                        <p>Sign in Page Title Verified</p>
-                        <p>User signed Admin</p>
-                        <p>is displayed in 109ms</p>
-                        <p>is displayed in 141ms</p>
-                        <p>Click History Customer</p>
-                        <p>Click Customer</p>
-                        <p>NEW SMYRNA BEACH
-FL
-321693021is displayed in 451ms</p>
-                        Customer Name found Noel Ford
-                        Strings Matched: Noel Ford =Noel Ford
-                        <p>User Name Verified for Bookmark Functionality</p>
-                        <p>Adminis displayed in 48ms</p>
-                        <p>Sign Outis displayed in 124ms</p>
-                        <p>All Tests Completed...</p>
-                        <p>Firefox Launched</p>
-                        <p>Browser Maximised</p>
-                        <p>Sign in Page Title Verified</p>
-                        <p>User signed Admin</p>
-                        <p>Enter Text for Search =Automation</p>
-                        <p>is displayed in 531ms</p>
-                        <p>Click Customer</p>
-                        Customer Name found Mr. Automation Mate
-                        Strings Matched: Mr. Automation Mate =Mr. Automation Mate
-                        <p>User Name Matched =Mr. Automation Mate</p>
-                        <p>Adminis displayed in 109ms</p>
-                        <p>Sign Outis displayed in 101ms</p>
-                        <p>All Tests Completed...</p>
-                        <p>Firefox Launched</p>
-                        <p>Browser Maximised</p>
-                        <p>Sign in Page Title Verified</p>
-                        <p>User signed Admin</p>
-                        <p>Enter Text for Search =Mate</p>
-                        <p>is displayed in 111ms</p>
-                        <p>Click Customer</p>
-                        Customer Name found Mr. Automation Mate
-                        Strings Matched: Mr. Automation Mate =Mr. Automation Mate
-                        <p>User Name Matched =Mr. Automation Mate</p>
-                        <p>Adminis displayed in 70ms</p>
-                        <p>Sign Outis displayed in 69ms</p>
-                        <p>All Tests Completed...</p>
+                  Launching Chrome<br />
+                        Browser Maximised<br />
+                        Sign in Page Title Verified<br />
+                        User signed Admin<br />
+                        Enter Text for Search =0000011111<br />
+                        is displayed in 141ms<br />
+                        Click Customer<br />
+                        CustomerId found 0000011111<br />
+                        Strings Matched: 0000011111 =0000011111<br />
+                        Customer ID Matched =0000011111<br />
+                        Adminis displayed in 78ms<br />
+                        Sign Outis displayed in 62ms<br />
+                        Closing Browser<br />
+                        All Tests Completed...<br />
+                        Launching Chrome<br />
+                        Browser Maximised<br />
+                        Sign in Page Title Verified<br />
+                        User signed Admin<br />
+                        Enter Text for Search =LOC@0001<br />
+                        is displayed in 94ms<br />
+                        Click Customer<br />
+                        Customer Location Id found LOC@0001<br />
+                        Strings Matched: LOC@0001 =LOC@0001<br />
+                        LocationID ID Matched =LOC@0001<br />
+                        Verifying Address Details<br />
+                        Strings Matched: 007 Aut Automation Street Rt 20001 Apt =007 Aut Automation Street Rt 20001 Apt<br />
+                        Strings Matched: Cloudy =Cloudy<br />
+                        Strings Matched: D =D<br />
+                        Strings Matched: 00720-019 =00720-019<br />
+                        Adminis displayed in 110ms<br />
+                        Sign Outis displayed in 39ms<br />
+                        Closing Browser<br />
+                        All Tests Completed...<br />
+                        Launching Chrome<br />
+                        Browser Maximised<br />
+                        Sign in Page Title Verified<br />
+                        User signed Admin<br />
+                        is displayed in 172ms<br />
+                        Click Recent<br />
+                        Recent Customer =1200 Locust<br />
+                        Click Customer<br />
+                        Alert not configured<br />
+                        New Smyrna Beach<br/>
+FL<br/>
+32169-3021is displayed in 157ms<br />
+                        Strings Matched: 1200 Locust =1200 Locust<br />
+                        User Name Verified for Recent Functionality =1200 Locust<br />
+                        Adminis displayed in 60ms<br />
+                        Sign Outis displayed in 35ms<br />
+                        Closing Browser<br />
+                        All Tests Completed...<br />
+                        Launching Chrome<br />
+                        Browser Maximised<br />
+                        Sign in Page Title Verified<br />
+                        User signed Admin<br />
+                        is displayed in 156ms<br />
+                        is displayed in 156ms<br />
+                        Enter Text for Search =Alert<br />
+                        is displayed in 78ms<br />
+                        Click Customer<br />
+                        Cloudis displayed in 184ms<br />
+                        Customer Name found Mr. Alert Test<br />
+                        Strings Matched: Mr. Alert Test =Mr. Alert Test<br />
+                        User Name Verified for Alert Functionality<br />
+                        OKis displayed in 876ms<br />
+                        Click Ok<br />
+                        Alert on Load Clicked<br />
+                        Automation Messageis displayed in 47ms<br />
+                        Click Description<br />
+                        OKis displayed in 65ms<br />
+                        &lt;a href=&quot;F:\FailedTestsScreenshots\TestSearchAlertOnLoadScreenshot-1558111267207.jpg&quot;&gt;&lt;align=&quot;left&quot;&gt;Error screenshot at Fri May 17 11:41:08 CDT 2019<br />
+                        &lt;img width=&quot;1024&quot; src=&quot;F:\FailedTestsScreenshots\TestSearchAlertOnLoadScreenshot-1558111267207.jpg&quot; alt=&quot;screenshot at Fri May 17 11:41:08 CDT 2019&quot;/&gt;&lt;/a&gt;&lt;br /&gt;<br />
+                        Closing Browser<br />
+                        All Tests Completed...<br />
+                        Launching Chrome<br />
+                        Browser Maximised<br />
+                        Sign in Page Title Verified<br />
+                        User signed Admin<br />
+                        is displayed in 172ms<br />
+                        is displayed in 78ms<br />
+                        Enter Text for Search =Automation<br />
+                        is displayed in 46ms<br />
+                        Click Customer<br />
+                        Cloudy<br/>
+D<br/>
+00720-019is displayed in 414ms<br />
+                        Customer Name found Mr. Automation Mate<br />
+                        Strings Matched: Mr. Automation Mate =Mr. Automation Mate<br />
+                        User Name verified =Mr. Automation Mate<br />
+                        $0.00is displayed in 74ms<br />
+                        $50.00is displayed in 125ms<br />
+                        $0.00is displayed in 67ms<br />
+                        $0.00is displayed in 70ms<br />
+                        Transaction Link Clicked<br />
+                        Summary Link Clicked<br />
+                        -$14.74is displayed in 152ms<br />
+                        $50.00is displayed in 117ms<br />
+                        $0.00is displayed in 125ms<br />
+                        $0.00is displayed in 93ms<br />
+                        $0.00 equals$0.00<br />
+                        -$14.74 equals-$14.74<br />
+                        $50.00 equals$50.00<br />
+                        $0.00 equals$0.00<br />
+                        $0.00 equals$0.00<br />
+                        -$14.74 equals-$14.74<br />
+                        $50.00 equals$50.00<br />
+                        $0.00 equals$0.00<br />
+                        Adminis displayed in 78ms<br />
+                        Sign Outis displayed in 35ms<br />
+                        Closing Browser<br />
+                        All Tests Completed...<br />
+                        Launching Chrome<br />
+                        Browser Maximised<br />
+                        Sign in Page Title Verified<br />
+                        User signed Admin<br />
+                        is displayed in 156ms<br />
+                        is displayed in 141ms<br />
+                        Click History Customer<br />
+                        Click Customer<br />
+                        New Smyrna Beach<br/>
+FL<br/>
+32169-3021is displayed in 609ms<br />
+                        Customer Name found Noel Ford<br />
+                        Strings Matched: Noel Ford =Noel Ford<br />
+                        User Name Verified for Bookmark Functionality<br />
+                        Adminis displayed in 50ms<br />
+                        Sign Outis displayed in 731ms<br />
+                        Closing Browser<br />
+                        All Tests Completed...<br />
+                        Launching Chrome<br />
+                        Browser Maximised<br />
+                        Sign in Page Title Verified<br />
+                        User signed Admin<br />
+                        Enter Text for Search =Automation<br />
+                        is displayed in 58ms<br />
+                        Click Customer<br />
+                        Customer Name found Mr. Automation Mate<br />
+                        Strings Matched: Mr. Automation Mate =Mr. Automation Mate<br />
+                        User Name Matched =Mr. Automation Mate<br />
+                        Adminis displayed in 63ms<br />
+                        Sign Outis displayed in 113ms<br />
+                        Closing Browser<br />
+                        All Tests Completed...<br />
+                        Launching Chrome<br />
+                        Browser Maximised<br />
+                        Sign in Page Title Verified<br />
+                        User signed Admin<br />
+                        Enter Text for Search =Mate<br />
+                        is displayed in 48ms<br />
+                        Click Customer<br />
+                        Customer Name found Mr. Automation Mate<br />
+                        Strings Matched: Mr. Automation Mate =Mr. Automation Mate<br />
+                        User Name Matched =Mr. Automation Mate<br />
+                        Adminis displayed in 63ms<br />
+                        Sign Outis displayed in 39ms<br />
+                        Closing Browser<br />
+                        All Tests Completed...<br />
             </div>
 
 </body>
