--- a/test-output/html/output.html
+++ b/test-output/html/output.html
@@ -25,8 +25,8 @@
                         CustomerId found 0000011111<br />
                         Strings Matched: 0000011111 =0000011111<br />
                         Customer ID Matched =0000011111<br />
-                        Adminis displayed in 78ms<br />
-                        Sign Outis displayed in 62ms<br />
+                        Adminis displayed in 102ms<br />
+                        Sign Outis displayed in 109ms<br />
                         Closing Browser<br />
                         All Tests Completed...<br />
                         Launching Chrome<br />
@@ -34,7 +34,7 @@
                         Sign in Page Title Verified<br />
                         User signed Admin<br />
                         Enter Text for Search =LOC@0001<br />
-                        is displayed in 94ms<br />
+                        is displayed in 77ms<br />
                         Click Customer<br />
                         Customer Location Id found LOC@0001<br />
                         Strings Matched: LOC@0001 =LOC@0001<br />
@@ -44,76 +44,76 @@
                         Strings Matched: Cloudy =Cloudy<br />
                         Strings Matched: D =D<br />
                         Strings Matched: 00720-019 =00720-019<br />
-                        Adminis displayed in 110ms<br />
-                        Sign Outis displayed in 39ms<br />
+                        Adminis displayed in 79ms<br />
+                        Sign Outis displayed in 426ms<br />
                         Closing Browser<br />
                         All Tests Completed...<br />
                         Launching Chrome<br />
                         Browser Maximised<br />
                         Sign in Page Title Verified<br />
                         User signed Admin<br />
-                        is displayed in 172ms<br />
+                        is displayed in 109ms<br />
                         Click Recent<br />
-                        Recent Customer =1200 Locust<br />
+                        Recent Customer =007 Test<br />
                         Click Customer<br />
-                        Alert not configured<br />
-                        New Smyrna Beach<br/>
-FL<br/>
-32169-3021is displayed in 157ms<br />
-                        Strings Matched: 1200 Locust =1200 Locust<br />
-                        User Name Verified for Recent Functionality =1200 Locust<br />
-                        Adminis displayed in 60ms<br />
-                        Sign Outis displayed in 35ms<br />
+                        Click Ok<br />
+                        Cloudis displayed in 305ms<br />
+                        Strings Matched: 007 Test =007 Test<br />
+                        User Name Verified for Recent Functionality =007 Test<br />
+                        Adminis displayed in 281ms<br />
+                        Sign Outis displayed in 67ms<br />
                         Closing Browser<br />
                         All Tests Completed...<br />
                         Launching Chrome<br />
                         Browser Maximised<br />
                         Sign in Page Title Verified<br />
                         User signed Admin<br />
-                        is displayed in 156ms<br />
-                        is displayed in 156ms<br />
+                        is displayed in 142ms<br />
+                        is displayed in 125ms<br />
                         Enter Text for Search =Alert<br />
                         is displayed in 78ms<br />
                         Click Customer<br />
-                        Cloudis displayed in 184ms<br />
+                        Cloudis displayed in 1075ms<br />
                         Customer Name found Mr. Alert Test<br />
                         Strings Matched: Mr. Alert Test =Mr. Alert Test<br />
                         User Name Verified for Alert Functionality<br />
-                        OKis displayed in 876ms<br />
+                        OKis displayed in 543ms<br />
                         Click Ok<br />
                         Alert on Load Clicked<br />
-                        Automation Messageis displayed in 47ms<br />
+                        Automation Messageis displayed in 227ms<br />
                         Click Description<br />
-                        OKis displayed in 65ms<br />
-                        &lt;a href=&quot;F:\FailedTestsScreenshots\TestSearchAlertOnLoadScreenshot-1558111267207.jpg&quot;&gt;&lt;align=&quot;left&quot;&gt;Error screenshot at Fri May 17 11:41:08 CDT 2019<br />
-                        &lt;img width=&quot;1024&quot; src=&quot;F:\FailedTestsScreenshots\TestSearchAlertOnLoadScreenshot-1558111267207.jpg&quot; alt=&quot;screenshot at Fri May 17 11:41:08 CDT 2019&quot;/&gt;&lt;/a&gt;&lt;br /&gt;<br />
+                        OKis displayed in 125ms<br />
+                        Click Ok<br />
+                        Alert on description Clicked<br />
+                        Adminis displayed in 83ms<br />
+                        Sign Outis displayed in 148ms<br />
                         Closing Browser<br />
                         All Tests Completed...<br />
                         Launching Chrome<br />
                         Browser Maximised<br />
                         Sign in Page Title Verified<br />
                         User signed Admin<br />
-                        is displayed in 172ms<br />
-                        is displayed in 78ms<br />
+                        is displayed in 129ms<br />
+                        is displayed in 140ms<br />
                         Enter Text for Search =Automation<br />
-                        is displayed in 46ms<br />
+                        is displayed in 296ms<br />
                         Click Customer<br />
                         Cloudy<br/>
 D<br/>
-00720-019is displayed in 414ms<br />
+00720-019is displayed in 1316ms<br />
                         Customer Name found Mr. Automation Mate<br />
                         Strings Matched: Mr. Automation Mate =Mr. Automation Mate<br />
                         User Name verified =Mr. Automation Mate<br />
-                        $0.00is displayed in 74ms<br />
-                        $50.00is displayed in 125ms<br />
-                        $0.00is displayed in 67ms<br />
-                        $0.00is displayed in 70ms<br />
+                        -$14.74is displayed in 524ms<br />
+                        $50.00is displayed in 242ms<br />
+                        $0.00is displayed in 192ms<br />
+                        $0.00is displayed in 219ms<br />
                         Transaction Link Clicked<br />
                         Summary Link Clicked<br />
-                        -$14.74is displayed in 152ms<br />
-                        $50.00is displayed in 117ms<br />
-                        $0.00is displayed in 125ms<br />
-                        $0.00is displayed in 93ms<br />
+                        -$14.74is displayed in 157ms<br />
+                        $50.00is displayed in 223ms<br />
+                        $0.00is displayed in 188ms<br />
+                        $0.00is displayed in 282ms<br />
                         $0.00 equals$0.00<br />
                         -$14.74 equals-$14.74<br />
                         $50.00 equals$50.00<br />
@@ -122,26 +122,26 @@ D<br/>
                         -$14.74 equals-$14.74<br />
                         $50.00 equals$50.00<br />
                         $0.00 equals$0.00<br />
-                        Adminis displayed in 78ms<br />
-                        Sign Outis displayed in 35ms<br />
+                        Adminis displayed in 63ms<br />
+                        Sign Outis displayed in 128ms<br />
                         Closing Browser<br />
                         All Tests Completed...<br />
                         Launching Chrome<br />
                         Browser Maximised<br />
                         Sign in Page Title Verified<br />
                         User signed Admin<br />
-                        is displayed in 156ms<br />
-                        is displayed in 141ms<br />
+                        is displayed in 148ms<br />
+                        is displayed in 189ms<br />
                         Click History Customer<br />
                         Click Customer<br />
                         New Smyrna Beach<br/>
 FL<br/>
-32169-3021is displayed in 609ms<br />
+32169-3021is displayed in 3179ms<br />
                         Customer Name found Noel Ford<br />
                         Strings Matched: Noel Ford =Noel Ford<br />
                         User Name Verified for Bookmark Functionality<br />
-                        Adminis displayed in 50ms<br />
-                        Sign Outis displayed in 731ms<br />
+                        Adminis displayed in 77ms<br />
+                        Sign Outis displayed in 359ms<br />
                         Closing Browser<br />
                         All Tests Completed...<br />
                         Launching Chrome<br />
@@ -149,13 +149,13 @@ FL<br/>
                         Sign in Page Title Verified<br />
                         User signed Admin<br />
                         Enter Text for Search =Automation<br />
-                        is displayed in 58ms<br />
+                        is displayed in 86ms<br />
                         Click Customer<br />
                         Customer Name found Mr. Automation Mate<br />
                         Strings Matched: Mr. Automation Mate =Mr. Automation Mate<br />
                         User Name Matched =Mr. Automation Mate<br />
-                        Adminis displayed in 63ms<br />
-                        Sign Outis displayed in 113ms<br />
+                        Adminis displayed in 563ms<br />
+                        Sign Outis displayed in 141ms<br />
                         Closing Browser<br />
                         All Tests Completed...<br />
                         Launching Chrome<br />
@@ -163,13 +163,13 @@ FL<br/>
                         Sign in Page Title Verified<br />
                         User signed Admin<br />
                         Enter Text for Search =Mate<br />
-                        is displayed in 48ms<br />
+                        is displayed in 46ms<br />
                         Click Customer<br />
                         Customer Name found Mr. Automation Mate<br />
                         Strings Matched: Mr. Automation Mate =Mr. Automation Mate<br />
                         User Name Matched =Mr. Automation Mate<br />
-                        Adminis displayed in 63ms<br />
-                        Sign Outis displayed in 39ms<br />
+                        Adminis displayed in 39ms<br />
+                        Sign Outis displayed in 35ms<br />
                         Closing Browser<br />
                         All Tests Completed...<br />
             </div>
