--- a/test-output/html/output.html
+++ b/test-output/html/output.html
@@ -17,192 +17,43 @@
   <div id="log">
                   Launching Chrome<br />
                         Browser Maximised<br />
+                        Angular Request Completed in 85ms<br />
                         Sign in Page Title Verified<br />
-                        User signed Admin<br />
-                        Enter Text for Search =0000011111<br />
-                        is displayed in 78ms<br />
-                        Click Customer<br />
-                        CustomerId found 0000011111<br />
-                        Strings Matched: 0000011111 =0000011111<br />
-                        Customer ID Matched =0000011111<br />
-                        Adminis displayed in 32ms<br />
-                        Sign Outis displayed in 34ms<br />
-                        Closing Browser<br />
-                        All Tests Completed...<br />
-                        Launching Chrome<br />
-                        Browser Maximised<br />
-                        Sign in Page Title Verified<br />
-                        User signed Admin<br />
-                        Enter Text for Search =LOC@0001<br />
-                        is displayed in 31ms<br />
-                        Click Customer<br />
-                        Customer Location Id found LOC@0001<br />
-                        Strings Matched: LOC@0001 =LOC@0001<br />
-                        LocationID ID Matched =LOC@0001<br />
-                        Verifying Address Details<br />
-                        Strings Matched: 007 Aut Automation Street Rt 20001 Apt =007 Aut Automation Street Rt 20001 Apt<br />
-                        Strings Matched: Cloudy =Cloudy<br />
-                        Strings Matched: D =D<br />
-                        Strings Matched: 00720-019 =00720-019<br />
-                        Adminis displayed in 30ms<br />
-                        Sign Outis displayed in 34ms<br />
-                        Closing Browser<br />
-                        All Tests Completed...<br />
-                        Launching Chrome<br />
-                        Browser Maximised<br />
-                        Sign in Page Title Verified<br />
+                        Angular Request Completed in 15ms<br />
                         User signed Admin<br />
                         Enter Text for Search =LOC@0004<br />
-                        is displayed in 31ms<br />
+                        Element displayed in 94ms<br />
+                        Angular request time 1045ms<br />
                         Click Customer<br />
+                        Angular request time 1871ms<br />
+                        Angular request time 15ms<br />
                         Customer Location Id found LOC@0004<br />
-                        Strings Matched: LOC@0004 =LOC@0004<br />
-                        LocationID ID Matched =LOC@0004<br />
-                        Click on Account Drop down<br />
-                        Other Accounts (3)is displayed in 29ms<br />
-                        Enter Account Name<br />
-                        is displayed in 35ms<br />
-                        $0.00is displayed in 36ms<br />
-                        Adminis displayed in 31ms<br />
-                        Sign Outis displayed in 35ms<br />
+                        Strings Matched: LOC@0004 = LOC@0004<br />
+                        Angular request time 14ms<br />
+                        Angular request time 20ms<br />
+                        Angular request time 20ms<br />
+                        Angular request time 45ms<br />
+                        Angular request time 21ms<br />
+                        Angular request time 14ms<br />
+                        Angular request time 17ms<br />
+                        Angular request time 11ms<br />
+                        Angular request time 14ms<br />
+                        Angular request time 328ms<br />
+                        Angular request time 371ms<br />
+                        Verifying Customer Details<br />
+                        Strings Matched: 2312 = 2312<br />
+                        Strings Matched: Driv12312OUL312 = Driv12312OUL312<br />
+                        Strings Matched: (900) 786-0102 = (900) 786-0102<br />
+                        Strings Matched: + Ext. 0112 = + Ext. 0112<br />
+                        Strings Matched: automation@cogsdale.com = automation@cogsdale.com<br />
+                        Strings Matched: 007 Test Apt = 007 Test Apt<br />
+                        Strings Matched: New York NY 12345-67890 = New York NY 12345-67890<br />
+                        Angular request time 16ms<br />
+                        Element displayed in 51ms<br />
+                        Element displayed in 47ms<br />
+                        Angular request time 28ms<br />
                         Closing Browser<br />
-                        All Tests Completed...<br />
-                        Launching Chrome<br />
-                        Browser Maximised<br />
-                        Sign in Page Title Verified<br />
-                        User signed Admin<br />
-                        Enter Text for Search =LOC@0001<br />
-                        is displayed in 95ms<br />
-                        Click Customer<br />
-                        Customer Location Id found LOC@0001<br />
-                        Strings Matched: LOC@0001 =LOC@0001<br />
-                        LocationID ID Matched =LOC@0001<br />
-                        Adminis displayed in 32ms<br />
-                        Sign Outis displayed in 31ms<br />
-                        Closing Browser<br />
-                        All Tests Completed...<br />
-                        Launching Chrome<br />
-                        Browser Maximised<br />
-                        Sign in Page Title Verified<br />
-                        User signed Admin<br />
-                        is displayed in 79ms<br />
-                        Click Recent<br />
-                        Recent Customer =007 Test<br />
-                        Click Customer<br />
-                        Click Ok<br />
-                        Cloudis displayed in 71ms<br />
-                        Strings Matched: 007 Test =007 Test<br />
-                        User Name Verified for Recent Functionality =007 Test<br />
-                        Adminis displayed in 28ms<br />
-                        Sign Outis displayed in 32ms<br />
-                        Closing Browser<br />
-                        All Tests Completed...<br />
-                        Launching Chrome<br />
-                        Browser Maximised<br />
-                        Sign in Page Title Verified<br />
-                        User signed Admin<br />
-                        is displayed in 94ms<br />
-                        is displayed in 62ms<br />
-                        Click History Customer<br />
-                        Click Customer<br />
-                        New Smyrna Beach<br/>
-FL<br/>
-32169-3021is displayed in 52ms<br />
-                        Customer Name found Noel Ford<br />
-                        Strings Matched: Noel Ford =Noel Ford<br />
-                        User Name Verified for Bookmark Functionality<br />
-                        Adminis displayed in 31ms<br />
-                        Sign Outis displayed in 30ms<br />
-                        Closing Browser<br />
-                        All Tests Completed...<br />
-                        Launching Chrome<br />
-                        Browser Maximised<br />
-                        Sign in Page Title Verified<br />
-                        User signed Admin<br />
-                        is displayed in 63ms<br />
-                        is displayed in 63ms<br />
-                        Enter Text for Search =Alert<br />
-                        is displayed in 31ms<br />
-                        Click Customer<br />
-                        Cloudis displayed in 66ms<br />
-                        Customer Name found Mr. Alert Test<br />
-                        Strings Matched: Mr. Alert Test =Mr. Alert Test<br />
-                        User Name Verified for Alert Functionality<br />
-                        OKis displayed in 62ms<br />
-                        Click Ok<br />
-                        Alert on Load Clicked<br />
-                        Automation Messageis displayed in 36ms<br />
-                        Click Description<br />
-                        OKis displayed in 62ms<br />
-                        &lt;a href=&quot;F:\FailedTestsScreenshots\TestSearchAlertOnLoadScreenshot-1558450053119.jpg&quot;&gt;&lt;align=&quot;left&quot;&gt;Error screenshot at Tue May 21 09:47:33 CDT 2019<br />
-                        &lt;img width=&quot;1024&quot; src=&quot;F:\FailedTestsScreenshots\TestSearchAlertOnLoadScreenshot-1558450053119.jpg&quot; alt=&quot;screenshot at Tue May 21 09:47:33 CDT 2019&quot;/&gt;&lt;/a&gt;&lt;br /&gt;<br />
-                        Closing Browser<br />
-                        All Tests Completed...<br />
-                        Launching Chrome<br />
-                        Browser Maximised<br />
-                        Sign in Page Title Verified<br />
-                        User signed Admin<br />
-                        is displayed in 63ms<br />
-                        is displayed in 62ms<br />
-                        Enter Text for Search =Automation<br />
-                        is displayed in 31ms<br />
-                        Click Customer<br />
-                        Cloudy<br/>
-D<br/>
-00720-019is displayed in 53ms<br />
-                        Customer Name found Mr. Automation Mate<br />
-                        Strings Matched: Mr. Automation Mate =Mr. Automation Mate<br />
-                        User Name verified =Mr. Automation Mate<br />
-                        -$14.74is displayed in 98ms<br />
-                        $0.00is displayed in 63ms<br />
-                        -$14.74is displayed in 63ms<br />
-                        $0.00is displayed in 63ms<br />
-                        Transaction Link Clicked<br />
-                        Summary Link Clicked<br />
-                        -$14.74is displayed in 33ms<br />
-                        $0.00is displayed in 46ms<br />
-                        -$14.74is displayed in 47ms<br />
-                        $0.00is displayed in 62ms<br />
-                        $0.00 equals$0.00<br />
-                        -$14.74 equals-$14.74<br />
-                        $0.00 equals$0.00<br />
-                        -$14.74 equals-$14.74<br />
-                        $0.00 equals$0.00<br />
-                        -$14.74 equals-$14.74<br />
-                        $0.00 equals$0.00<br />
-                        -$14.74 equals-$14.74<br />
-                        Adminis displayed in 31ms<br />
-                        Sign Outis displayed in 32ms<br />
-                        Closing Browser<br />
-                        All Tests Completed...<br />
-                        Launching Chrome<br />
-                        Browser Maximised<br />
-                        Sign in Page Title Verified<br />
-                        User signed Admin<br />
-                        Enter Text for Search =Automation<br />
-                        is displayed in 78ms<br />
-                        Click Customer<br />
-                        Customer Name found Mr. Automation Mate<br />
-                        Strings Matched: Mr. Automation Mate =Mr. Automation Mate<br />
-                        User Name Matched =Mr. Automation Mate<br />
-                        Adminis displayed in 28ms<br />
-                        Sign Outis displayed in 28ms<br />
-                        Closing Browser<br />
-                        All Tests Completed...<br />
-                        Launching Chrome<br />
-                        Browser Maximised<br />
-                        Sign in Page Title Verified<br />
-                        User signed Admin<br />
-                        Enter Text for Search =Mate<br />
-                        is displayed in 47ms<br />
-                        Click Customer<br />
-                        Customer Name found Mr. Automation Mate<br />
-                        Strings Matched: Mr. Automation Mate =Mr. Automation Mate<br />
-                        User Name Matched =Mr. Automation Mate<br />
-                        Adminis displayed in 31ms<br />
-                        Sign Outis displayed in 30ms<br />
-                        Closing Browser<br />
-                        All Tests Completed...<br />
+                        Test Completed...<br />
             </div>
 
 </body>
