--- a/test-output/html/output.html
+++ b/test-output/html/output.html
@@ -17,31 +17,28 @@
   <div id="log">
                   Launching Chrome<br />
                         Browser Maximised<br />
-                        Angular Request Completed in 67ms<br />
+                        Angular Request Completed in 98ms<br />
                         Sign in Page Title Verified<br />
-                        Angular Request Completed in 16ms<br />
+                        Angular Request Completed in 15ms<br />
                         User signed Admin<br />
-                        Enter Text for Search =LOC@0001<br />
-                        Element displayed in 63ms<br />
-                        Angular request time 939ms<br />
+                        Enter Text for Search =LOC@0004<br />
+                        Element displayed in 78ms<br />
+                        Angular request time 1053ms<br />
                         Click Customer<br />
-                        Angular request time 2187ms<br />
-                        Angular request time 13ms<br />
-                        Customer Location Id found LOC@0001<br />
-                        Strings Matched: LOC@0001 = LOC@0001<br />
+                        Angular request time 1671ms<br />
                         Angular request time 12ms<br />
-                        Verifying Customer Details<br />
-                        Strings Matched: 2312 = 2312<br />
-                        Strings Matched: Driv12312OUL312 = Driv12312OUL312<br />
-                        Strings Matched: (900) 786-0102 = (900) 786-0102<br />
-                        Strings Matched: + Ext. 0112 = + Ext. 0112<br />
-                        Strings Matched: automation@cogsdale.com = automation@cogsdale.com<br />
-                        Strings Matched: 007 Test Apt = 007 Test Apt<br />
-                        Strings Matched: New York NY 12345-67890 = New York NY 12345-67890<br />
-                        Angular request time 16ms<br />
-                        Element displayed in 30ms<br />
-                        Element displayed in 34ms<br />
+                        Customer Location Id found LOC@0004<br />
+                        Strings Matched: LOC@0004 = LOC@0004<br />
+                        Angular request time 13ms<br />
+                        Angular request time 15ms<br />
                         Angular request time 18ms<br />
+                        Angular request time 10ms<br />
+                        Strings Matched: Secondary Customer (SECONDARY) = Secondary Customer (SECONDARY)<br />
+                        ***Placed screen shot in F:\TestScreenshots\ ***<br />
+                        Angular request time 15ms<br />
+                        Element displayed in 41ms<br />
+                        Element displayed in 44ms<br />
+                        Angular request time 16ms<br />
                         Closing Browser<br />
                         Test Completed...<br />
             </div>
