--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67c1fc">  <td>19/10/10 12:29:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0016_1_VerifyBillingDetails_Budget@3738449f]">&gt;&gt;readProp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1866875501</td>   <td></td> </tr>
-<tr bgcolor="8a9f61">  <td>19/10/10 12:29:14</td>   <td>4154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0016_1_VerifyBillingDetails_Budget.VerifyBillingDetails_Budget()[pri:1, instance:com.NexusPortalAutomation.TestCases.Java.TC0016_1_VerifyBillingDetails_Budget@3738449f]">VerifyBillingDetails_Budget</td> 
-  <td>main@1866875501</td>   <td></td> </tr>
-<tr bgcolor="67c1fc">  <td>19/10/10 12:29:28</td>   <td>18588</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0016_1_VerifyBillingDetails_Budget@3738449f]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1866875501</td>   <td></td> </tr>
+<tr bgcolor="9884b2">  <td>19/10/10 14:56:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0035_VerifyAction_Transfers_StopService@247bddad]">&gt;&gt;readProp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1866850137</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/10/10 14:57:02</td>   <td>4531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0035_VerifyAction_Transfers_StopService.VerifyAction_Transfers_StopService()[pri:1, instance:com.NexusPortalAutomation.TestCases.Java.TC0035_VerifyAction_Transfers_StopService@247bddad]">VerifyAction_Transfers_StopService</td> 
+  <td>main@1866850137</td>   <td></td> </tr>
+<tr bgcolor="9884b2">  <td>19/10/10 14:58:21</td>   <td>83800</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0035_VerifyAction_Transfers_StopService@247bddad]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1866850137</td>   <td></td> </tr>
 </table>
